Algorinm lesson hw5 recurs (#43)
* javax.persistence.PersistenceException: No Persistence provider for EntityManager named db_mysql:

* HW 5 JPA

* lesson 5 compite
рекурсия

--- a/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/navigation_bar.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/navigation_bar.xhtml
@@ -9,6 +9,7 @@
         <table width="30%" align="center">
             <tr>
                 <td width="20%"><h:link value="Main" outcome="index.xhtml"/></td>
+                <td width="20%"><h:link value="Categories" outcome="categories.xhtml"/></td>
                 <td width="20%"><h:link value="Catalog" outcome="catalog.xhtml"/></td>
                 <td width="20%"><h:link value="Cart" outcome="cart.xhtml"/></td>
                 <td width="20%"><h:link value="Order" outcome="order.xhtml"/></td>
