--- a/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/navigation_bar.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/WEB-INF/navigation_bar.xhtml
@@ -6,10 +6,10 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <div>
-        <table width="30%" align="center">
+        <table width="40%" align="center">
             <tr>
                 <td width="20%"><h:link value="Main" outcome="index.xhtml"/></td>
-                <td width="20%"><h:link value="Categories" outcome="categories.xhtml"/></td>
+                <td width="20%"><h:link value="Categor" outcome="categories.xhtml"/></td>
                 <td width="20%"><h:link value="Catalog" outcome="catalog.xhtml"/></td>
                 <td width="20%"><h:link value="Cart" outcome="cart.xhtml"/></td>
                 <td width="20%"><h:link value="Order" outcome="order.xhtml"/></td>
