--- a/Java/JavaEE/webAppJSF/src/main/webapp/product.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/product.xhtml
@@ -5,27 +5,35 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h:head>
-        <title>Product</title>
-    </h:head>
-    <h:body>
-        <ui:include src="WEB-INF/navigation_bar.xhtml"/>
-        <h1 align="center">Это страница добавления/редактирования товара</h1>
-        <div align="center">
-            <h:form>
-                <h:panelGrid columns="2">
-                    <f:facet name="Field"/>
-                    <f:facet name="Value"/>
+<h:head>
+    <title>Product</title>
+</h:head>
+<h:body>
+    <ui:include src="WEB-INF/navigation_bar.xhtml"/>
+    <h1 align="center">Это страница добавления/редактирования товара</h1>
+    <div align="center">
+        <h:form>
+            <h:panelGrid columns="2">
+                <f:facet name="Field"/>
+                <f:facet name="Value"/>
 
-                    <h:outputLabel value="Имя"/>
-                    <h:inputText value="#{productManipulation.productRep.name}" label="Имя" required="true"/>
+                <h:outputLabel value="Имя"/>
+                <h:inputText id = "name" label="Имя" value="#{productManipulation.productRep.name}"/>
 
-                    <h:outputLabel value="Цена"/>
-                    <h:inputText value="#{productManipulation.productRep.price}" label="Цена" required="true"/>
-                </h:panelGrid>
-                <h:commandButton value="Сохранить" action="#{productManipulation.saveChanges()}"/>
-                <h:commandButton value="Отмена" action="#{productManipulation.cancel()}"/>
-            </h:form>
-        </div>
-    </h:body>
+                <h:outputLabel value="Цена"/>
+                <h:inputText id="price" label="Цена" value="#{productManipulation.productRep.price}"/>
+
+                <h:outputLabel value="Категория"/>
+                <h:panelGroup>
+                    <h:selectOneMenu value="#{productManipulation.categoryId}">
+                        <f:selectItems value="#{categoryManipulation.all}" var="category" itemValue="#{category.id}" itemLabel="#{category.name}"/>
+                    </h:selectOneMenu>
+                    <h:commandButton value="+" action="#{categoryManipulation.addCategory()}"/>
+                </h:panelGroup>
+            </h:panelGrid>
+            <h:commandButton value="Сохранить" action="#{productManipulation.saveChanges()}"/>
+            <h:commandButton value="Отмена" action="#{productManipulation.cancel()}"/>
+        </h:form>
+    </div>
+</h:body>
 </html>
