--- a/Java/JavaEE/webAppJSF/src/main/webapp/order.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/order.xhtml
@@ -10,6 +10,6 @@
     </h:head>
     <h:body>
         <ui:include src="WEB-INF/navigation_bar.xhtml"/>
-        <h1 align="center">Это страница оформления заказа</h1>
+        <h1 align="center">Это страница просмотра/удаления заказов</h1>
     </h:body>
 </html>
