--- a/Java/JavaEE/webAppJSF/src/main/webapp/error.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/error.xhtml
@@ -6,15 +6,17 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <h:head>
-        <ui:include src="/WEB-INF/head.xhtml"/>
-        <title>Order</title>
-    </h:head>
-    <h:body>
-        <ui:include src="/WEB-INF/navigation_bar.xhtml"/>
+<h:head>
+    <ui:include src="/WEB-INF/head.xhtml"/>
+    <title>Product</title>
+</h:head>
+<h:body>
+    <ui:include src="/WEB-INF/navigation_bar.xhtml"/>
 
-        <h1 align="center">Это страница просмотра/удаления заказов</h1>
+    <h1 align="center">Это страница ошибки аторизации авторизации</h1>
 
-        <ui:include src="/WEB-INF/footer.xhtml"/>
-    </h:body>
+    <h2 align="center">Ошибка аторизации</h2>
+
+    <ui:include src="/WEB-INF/footer.xhtml"/>
+</h:body>
 </html>
