--- a/Java/JavaEE/webAppJSF/src/main/webapp/cart.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/cart.xhtml
@@ -4,16 +4,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
+        <ui:include src="/WEB-INF/head.xhtml"/>
         <title>Cart</title>
     </h:head>
     <h:body>
-        <ui:include src="WEB-INF/navigation_bar.xhtml"/>
+        <ui:include src="/WEB-INF/navigation_bar.xhtml"/>
+
         <h1 align="center">Это корзина покупок</h1>
-        <div align="center">
+
+        <div align="center" class="container">
             <h:form>
-                <h:dataTable value="#{cartManipulation.all}" var="elementOfProduct">
+                <h:dataTable value="#{cartManipulation.all}" var="elementOfProduct" styleClass="table" headerClass="table-row-cell" footerClass="table-cell">
                     <h:column>
                         <f:facet name="header">Name</f:facet>
                         #{elementOfProduct.key.name}
@@ -31,7 +35,7 @@
                         #{elementOfProduct.key.price * elementOfProduct.value}
                     </h:column>
                     <h:column>
-                        <h:commandButton value="delete" action="#{cartManipulation.deleteProduct(elementOfProduct.key)}"/>
+                        <h:commandButton value="delete" action="#{cartManipulation.deleteProduct(elementOfProduct.key)}" styleClass="btn btn-danger"/>
                     </h:column>
                 </h:dataTable>
                 <h:panelGrid columns="2">
@@ -40,5 +44,7 @@
                 </h:panelGrid>
             </h:form>
         </div>
+
+        <ui:include src="/WEB-INF/footer.xhtml"/>
     </h:body>
 </html>
