--- a/Java/JavaEE/webAppJSF/src/main/webapp/product.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/product.xhtml
@@ -4,36 +4,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
+    <ui:include src="/WEB-INF/head.xhtml"/>
     <title>Product</title>
 </h:head>
 <h:body>
-    <ui:include src="WEB-INF/navigation_bar.xhtml"/>
+    <ui:include src="/WEB-INF/navigation_bar.xhtml"/>
+
     <h1 align="center">Это страница добавления/редактирования товара</h1>
-    <div align="center">
+
+    <div align="center" class="container">
+        <br/>
         <h:form>
-            <h:panelGrid columns="2">
+            <h:panelGrid columns="2" styleClass="form-group">
                 <f:facet name="Field"/>
                 <f:facet name="Value"/>
 
                 <h:outputLabel value="Имя"/>
-                <h:inputText id = "name" label="Имя" value="#{productManipulation.productRep.name}"/>
+                <h:inputText id = "name" label="Имя" value="#{productManipulation.element.name}"/>
 
                 <h:outputLabel value="Цена"/>
-                <h:inputText id="price" label="Цена" value="#{productManipulation.productRep.price}"/>
+                <h:inputText id="price" label="Цена" value="#{productManipulation.element.price}"/>
 
                 <h:outputLabel value="Категория"/>
                 <h:panelGroup>
-                    <h:selectOneMenu value="#{productManipulation.productRep.categoryRep.id}">
+                    <h:selectOneMenu value="#{productManipulation.element.categoryRep.id}">
                         <f:selectItems value="#{categoryManipulation.all}" var="categoryRep" itemValue="#{categoryRep.id}" itemLabel="#{categoryRep.name}"/>
                     </h:selectOneMenu>
-                    <h:commandButton value="+" action="#{categoryManipulation.addCategory()}"/>
+                    <h:commandButton value="+" action="#{categoryManipulation.add()}" styleClass="btn btn-primary btn-sm"/>
                 </h:panelGroup>
             </h:panelGrid>
-            <h:commandButton value="Сохранить" action="#{productManipulation.saveChanges()}"/>
-            <h:commandButton value="Отмена" action="#{productManipulation.cancel()}"/>
+            <br/>
+            <h:commandButton value="Сохранить" action="#{productManipulation.save()}" style="margin-right:10px;" styleClass="btn btn-success"/>
+            <h:commandButton value="Отмена" action="#{productManipulation.cancel()}" styleClass="btn btn-info"/>
         </h:form>
     </div>
+
+    <ui:include src="/WEB-INF/footer.xhtml"/>
 </h:body>
 </html>
