--- a/Java/JavaEE/webAppJSF/src/main/webapp/cart.xhtml
+++ b/Java/JavaEE/webAppJSF/src/main/webapp/cart.xhtml
@@ -42,6 +42,7 @@
                         <h:outputLabel value="FullPrice"/>
                         <h:outputLabel value="#{cartManipulation.sum}"/>
                 </h:panelGrid>
+                <h:commandButton value="createOrder" action="#{cartManipulation.createOrder}" styleClass="btn btn-success"/>
             </h:form>
         </div>
 
